# bills-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MARKETPLACE.md  Makefile  README.md  pyproject.toml  pytest.ini
bills/: cli.py
bills/mcp/: server.py
bills/plugin/: .mcp.json  settings.json
bills/plugin/.claude-plugin/: plugin.json
bills/plugin/agents/: bills.md
bills/plugin/hooks/: hooks.json
bills/plugin/skills/check/: SKILL.md
bills/plugin/skills/credit-cards/: SKILL.md
bills/sdk/common/: accounts.py  budget.py  config-baseline.yaml  config.py  config.yaml  defaults.yaml  filters.py  ignored.py  inventory.py  properties.py
claude/plugin/.claude-plugin/: plugin.json
claude/plugin/hooks/: cache_monarch.py  hooks.json
claude/plugin/skills/check/: SKILL.md
claude/plugin/skills/check-credit-cards/: SKILL.md
claude/plugin/skills/explain/: SKILL.md
claude/prompts/: check-bills.md
docs/: TODOS.md  credit-cards.md
docs/monarch/: categories.md
tests/: conftest.py
tests/claude/: conftest.py  stub_monarch_mcp.py  test_prompts.py
tests/unit/: test_cli_launcher.py  test_config.py  test_filters.py  test_inventory.py  test_mcp_budget.py  test_mcp_config.py  test_mcp_credit_accounts.py  test_mcp_funding_accounts.py  test_mcp_properties.py  test_property_inheritance.py
